# OpenGLRender

./: .gitconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  imgui.ini
src/: GPATH  GRTAGS  GTAGS
src/base/: Loger.cpp  Loger.h  log.txt
src/control/: input.cpp  input.h  key_code.h
src/header/: camera.h  glad.c  model.h  shader.h  threadpool.hpp
src/render/: Framebuffer.h  RenderOpenGL.h  Renderer.h  Texture.h  light.h  mesh.h  model.h  shader.h
src/shader/baopo/: baopo.fs  baopo.vs
src/unix/: app.hpp  main.cpp
src/win/: app.hpp  dx12_app.hpp  dx12_main.cpp  main.cpp
